# bloody_keyboard_rgb_control

./: README.md  device.py  main.py  pyproject.toml  requirements.txt  rgb_utils.py  setup.py
.github/workflows/: code-quality.yml  lint.yml  tests.yml
rgb_control/: device.py  main.py  pkg_data.py  rgb_utils.py
rgb_data/: default_rgb_profiles.json
tests/: test_rgb_utils.py
