[tool.poetry]
name = "rgb-control"
version = "0.0.1"
description = "The script allows you to set the RGB backlight color on A4Tech Bloody keyboards."
readme = "README.md"
authors = ["Alex Kuzhel <alexkuzhel.biz@gmail.com>"]
license = "MIT"
repository = "https://github.com/apo5tol/bloody_keyboard_rgb_control/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.scripts]
rgb-control = "rgb_control.main:main"

[tool.poetry.dependencies]
python = "^3.7"
pyusb = "1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
flake8-builtins = "^1.5.3"
flake8-functions-names = "^0.0.6"
pep8-naming = "^0.12.1"
flake8-bugbear = "^21.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
